--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,6 +1,6 @@
 # Changes here will be overwritten by Copier
 _commit: 2.5.0
-_src_path: gh:DiamondLightSource/python-copier-template
+_src_path: https://github.com/DiamondLightSource/python-copier-template
 author_email: dominic.oram@diamond.ac.uk
 author_name: Dominic Oram
 component_lifecycle: production
