--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,5 +1,5 @@
 # Changes here will be overwritten by Copier
-_commit: 2.5.0
+_commit: 4.0.1
 _src_path: https://github.com/DiamondLightSource/python-copier-template
 author_email: dominic.oram@diamond.ac.uk
 author_name: Dominic Oram
@@ -15,4 +15,5 @@ github_org: DiamondLightSource
 package_name: dodal
 pypi: true
 repo_name: dodal
+strict_typing: false
 type_checker: pyright
