Beamline fixes from Hyperion v1.5.0 testing (#1311)
* Uncommitted beamline changes as of 2025-06-25

* Make ruff happy

* Add unit test for smargon combined move and fix race condition

* Add timeout to suspicious test_cli_version which was sporadically hanging
Add documentation on how to run system tests locally

* Response to PR comments, revert smargon deferred move change pending dodal#1315

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "redis",
     "deepdiff",
     "scanspec>=0.7.3",
-    "event-model>=1.23",  # Until bluesky pins it https://github.com/DiamondLightSource/dodal/issues/1278
+    "event-model>=1.23",      # Until bluesky pins it https://github.com/DiamondLightSource/dodal/issues/1278
+    "pyzmq==26.3.0",          # Until we can move to RHEL 8 https://github.com/DiamondLightSource/mx-bluesky/issues/1139
 ]
 
 dynamic = ["version"]
