use acquire_time from ADBaseIO parent class

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,8 @@ dev = [
     "types-mock",
     "types-PyYAML",
     "types-aiofiles",
+    "databroker",
+    "matplotlib",
 ]
 
 [project.scripts]
