--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ description = "Ophyd devices and other utils that could be used across DLS beaml
 dependencies = [
     "click",
     "ophyd",
-    "ophyd-async==0.11.0",           # Pending https://github.com/bluesky/ophyd-async/issues/976
-    "epicscorelibs<=7.0.7.99.1.2a1", # Pending https://github.com/epics-base/epicscorelibs/issues/41
+    "ophyd-async==0.11.0",  # Pending https://github.com/bluesky/ophyd-async/issues/976
+    "epicscorelibs<=7.0.7.99.1.2a1",  # Pending https://github.com/epics-base/epicscorelibs/issues/41
     "bluesky",
     "pyepics",
     "dataclasses-json",
@@ -24,16 +24,16 @@ dependencies = [
     "requests",
     "graypy",
     "pydantic>=2.0",
-    "opencv-python-headless",        # For pin-tip detection.
-    "aioca",                         # Required for CA support with ophyd-async.
-    "p4p",                           # Required for PVA support with ophyd-async.
+    "opencv-python-headless", # For pin-tip detection.
+    "aioca",                  # Required for CA support with ophyd-async.
+    "p4p",                    # Required for PVA support with ophyd-async.
     "numpy",
     "aiofiles",
     "aiohttp",
     "redis",
     "scanspec>=0.7.3",
-    "event-model>=1.23",             # Until bluesky pins it https://github.com/DiamondLightSource/dodal/issues/1278
-    "pyzmq==26.3.0",                 # Until we can move to RHEL 8 https://github.com/DiamondLightSource/mx-bluesky/issues/1139
+    "event-model>=1.23",      # Until bluesky pins it https://github.com/DiamondLightSource/dodal/issues/1278
+    "pyzmq==26.3.0",          # Until we can move to RHEL 8 https://github.com/DiamondLightSource/mx-bluesky/issues/1139
 ]
 
 dynamic = ["version"]
@@ -83,21 +83,9 @@ save-panda = "dodal.devices.util.save_panda:main"
 [project.urls]
 GitHub = "https://github.com/DiamondLightSource/dodal"
 
-[[project.authors]]
+[[project.authors]] # Further authors may be added by duplicating this section
 email = "dominic.oram@diamond.ac.uk"
 name = "Dominic Oram"
-
-[[project.authors]]
-email = "joseph.ware@diamond.ac.uk"
-name = "Joseph Ware"
-
-[[project.authors]]
-email = "Oliver.Silvester@diamond.ac.uk"
-name = "Oliver Silvester"
-
-[[project.authors]]
-email = "noemi.frisina@diamond.ac.uk"
-name = "Noemi Frisina"
 
 [tool.setuptools.packages.find]
 where = ["src"]
