--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,7 @@ repos:
         types: [python]
         require_serial: false
 
-  - repo: https://github.com/thoughtworks/talisman
-    rev: v1.37.0
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.28.0
     hooks:
-      - id: talisman-commit
+      - id: gitleaks
