--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "click",
     "ophyd",
     "ophyd-async[ca,pva]>=0.13.0",
-    "bluesky",
+    "bluesky==1.14.2",  # https://github.com/bluesky/bluesky/issues/1938
     "pyepics",
     "dataclasses-json",
     "pillow",
