Rename DualCrystalMonoSimple to DCMEnergyBase and move it to common_dcm.py
Make BaseDCM extend DCMEnergyBase but update the docstrings to indicate which
should be used for which beamline DCM classes.

Tidy up classes with unnecessarily verbose __init__() methods.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,7 @@
     "python.analysis.extraPaths": [
         "./src"
     ],
-    "python.analysis.typeCheckingMode": "basic"
+    "python.analysis.typeCheckingMode": "basic",
+    "python-envs.defaultEnvManager": "ms-python.python:system",
+    "python-envs.pythonProjects": []
 }
