--- a/pyproject.toml
+++ b/pyproject.toml
@@ -198,6 +198,8 @@ lint.select = [
 # Remove this line to forbid private member access, walrus operators, banned api in asserts in tests 
 "tests/**/*" = ["SLF001", "RUF018", "TID251"]
 "system_tests/**/*" = ["SLF001", "RUF018", "TID251"]
+".github/**/*" = ["INP001"]
+"docs/**/*" = ["INP001"]
 
 [tool.ruff.lint.flake8-tidy-imports.banned-api]
 "time.sleep".msg = "Use bps.sleep or asyncio.sleep instead. # noqa will disable this rule for that line. See https://github.com/DiamondLightSource/mx-bluesky/issues/925"
