--- a/pyproject.toml
+++ b/pyproject.toml
@@ -188,6 +188,7 @@ lint.select = [
     "SLF",    # self - https://docs.astral.sh/ruff/settings/#lintflake8-self
     "RUF018", # walrus operators in asserts - https://docs.astral.sh/ruff/rules/assignment-in-assert/
     "TID251", # banned api - https://docs.astral.sh/ruff/rules/banned-api/
+    "INP001", # missing __init__.py - https://docs.astral.sh/ruff/rules/implicit-namespace-package/
 ]
 
 [tool.ruff.lint.per-file-ignores]
@@ -196,6 +197,8 @@ lint.select = [
 # Remove this line to forbid private member access, walrus operators, banned api in asserts in tests 
 "tests/**/*" = ["SLF001", "RUF018", "TID251"]
 "system_tests/**/*" = ["SLF001", "RUF018", "TID251"]
+".github/**/*" = ["INP001"]
+"docs/**/*" = ["INP001"]
 
 [tool.ruff.lint.flake8-tidy-imports.banned-api]
 "time.sleep".msg = "Use bps.sleep or asyncio.sleep instead. # noqa will disable this rule for that line. See https://github.com/DiamondLightSource/mx-bluesky/issues/925"
