--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,5 @@
     "python.analysis.extraPaths": [
         "./src"
     ],
-    "python.analysis.typeCheckingMode": "basic",
-    "python-envs.pythonProjects": []
+    "python.analysis.typeCheckingMode": "basic"
 }
