--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ description = "Ophyd devices and other utils that could be used across DLS beaml
 dependencies = [
     "click",
     "ophyd",
-    "ophyd-async[ca,pva]@git+https://github.com/bluesky/ophyd-async.git@main",
+    "ophyd-async[ca,pva]>=0.13.5",
     "bluesky>=1.14.5",
     "pyepics",
     "dataclasses-json",
@@ -23,15 +23,15 @@ dependencies = [
     "requests",
     "graypy",
     "pydantic>=2.0",
-    "opencv-python-headless",                                                  # For pin-tip detection.
+    "opencv-python-headless",         # For pin-tip detection.
     "numpy",
     "aiofiles",
     "aiohttp",
     "redis",
     "scanspec>=0.7.3",
-    "pyzmq==26.3.0",                                                           # Until we can move to RHEL 8 https://github.com/DiamondLightSource/mx-bluesky/issues/1139
+    "pyzmq==26.3.0",                  # Until we can move to RHEL 8 https://github.com/DiamondLightSource/mx-bluesky/issues/1139
     "deepdiff",
-    "daq-config-server>=v1.0.0-rc.2",                                          # For getting Configuration settings.
+    "daq-config-server>=v1.0.0-rc.2", # For getting Configuration settings.
 ]
 
 dynamic = ["version"]
