Pin to previous version of pyright

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,8 @@ dev = [
     "pre-commit",
     "psutil",
     "pydata-sphinx-theme>=0.12",
-    "pyright",
+    # Pin to previous pyright until https://github.com/microsoft/pyright/issues/11060 is fixed
+    "pyright==1.1.406", 
     "pytest",
     "pytest-asyncio",
     "pytest-cov",
