--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dev = [
     "pre-commit",
     "psutil",
     "pydata-sphinx-theme>=0.12",
-    "pyright",
+    "pyright==1.1.406",          # Pinned due to https://github.com/microsoft/pyright/issues/11060
     "pytest",
     "pytest-asyncio",
     "pytest-cov",
