--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ description = "Ophyd devices and other utils that could be used across DLS beaml
 dependencies = [
     "click",
     "ophyd",
-    "ophyd-async[ca,pva]>=0.13.2",
+    # pin new ophyd-async can be built
+    "ophyd-async[ca,pva]==0.13.4",
     "bluesky>=1.14.5",
     "pyepics",
     "dataclasses-json",
@@ -54,7 +55,8 @@ dev = [
     "pre-commit",
     "psutil",
     "pydata-sphinx-theme>=0.12",
-    "pyright",
+    # Pin to previous pyright until https://github.com/microsoft/pyright/issues/11060 is fixed
+    "pyright==1.1.406", 
     "pytest",
     "pytest-asyncio",
     "pytest-cov",
