--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ description = "Ophyd devices and other utils that could be used across DLS beaml
 dependencies = [
     "click",
     "ophyd",
-    "ophyd-async[ca,pva]>=0.13.2",
+    "ophyd_async @ git+https://github.com/bluesky/ophyd-async.git#egg=1104_quantize_gap",
+    # "ophyd-async[ca,pva]>=0.13.2",
     "bluesky>=1.14.5",
     "pyepics",
     "dataclasses-json",
