--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,7 @@ description = "Ophyd devices and other utils that could be used across DLS beaml
 dependencies = [
     "click",
     "ophyd",
-    # pin new ophyd-async can be built
-    "ophyd-async[ca,pva]==0.13.4",
+    "ophyd-async[ca,pva]>=0.13.5",
     "bluesky>=1.14.5",
     "pyepics",
     "dataclasses-json",
