--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,7 @@ description = "Ophyd devices and other utils that could be used across DLS beaml
 dependencies = [
     "click",
     "ophyd",
-    "ophyd_async @ git+https://github.com/bluesky/ophyd-async.git#egg=1104_quantize_gap",
-    # "ophyd-async[ca,pva]>=0.13.2",
+    "ophyd-async[ca,pva]>=0.13.2",
     "bluesky>=1.14.5",
     "pyepics",
     "dataclasses-json",
@@ -50,8 +49,7 @@ dev = [
     # Commented out due to dependency version conflict with pydantic 1.x
     # "copier",
     "myst-parser",
-    "ophyd_async @ git+https://github.com/bluesky/ophyd-async.git#egg=1104_quantize_gap",
-    # "ophyd_async[sim]",
+    "ophyd_async[sim]",
     "pipdeptree",
     "pre-commit",
     "psutil",
