--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ description = "Ophyd devices and other utils that could be used across DLS beaml
 dependencies = [
     "click",
     "ophyd",
-    "ophyd-async[ca,pva]>=0.13.7",
+    "ophyd-async[ca,pva] @ git+https://github.com/vredchenko/ophyd-async.git@claude/fork-repository-setup-011CV2CJkHgQRkp486d6HbCJ",
     "bluesky>=1.14.5",
     "pyepics",
     "pillow",
