Make sure fast grid scan parameters are applied (#1689)
* Initial stab at fixing the issue

* Check that we set fast grid scan params within rounding error

* Update comment for ophyd_async dependency

* Pin ophyd-async and fix naming issue

* Fix linter

* Make setting the gridscan parameters async

* Remove matcher name assignment in fast_grid_scan.py

Remove temporary matcher name assignment for clarity.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dev = [
     # Commented out due to dependency version conflict with pydantic 1.x
     # "copier",
     "myst-parser",
-    "ophyd_async[sim]",
+    "ophyd_async[sim]>=v0.13.6",
     "pipdeptree",
     "pre-commit",
     "psutil",
