--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ description = "Ophyd devices and other utils that could be used across DLS beaml
 dependencies = [
     "click",
     "ophyd",
-    "ophyd_async[sim,ca,pva]@git+https://github.com/bluesky/ophyd-async.git@improve-error-when-raw2derived-has-no-type",
+    "ophyd-async[ca,pva]>=v0.14.0",
     "bluesky>=1.14.5",
     "pyepics",
     "pillow",
@@ -22,22 +22,20 @@ dependencies = [
     "requests",
     "graypy",
     "pydantic>=2.0",
-    "opencv-python-headless",                                                                                            # For pin-tip detection.
+    "opencv-python-headless",       # For pin-tip detection.
     "numpy",
     "aiofiles",
     "aiohttp",
     "redis",
     "scanspec>=0.7.3",
-    "pyzmq==26.3.0",                                                                                                     # Until we can move to RHEL 8 https://github.com/DiamondLightSource/mx-bluesky/issues/1139
+    "pyzmq==26.3.0",                # Until we can move to RHEL 8 https://github.com/DiamondLightSource/mx-bluesky/issues/1139
     "deepdiff",
-    "daq-config-server>=v1.0.0", # For getting Configuration settings.
+    "daq-config-server>=v1.0.0",    # For getting Configuration settings.
 ]
-
 dynamic = ["version"]
 license.file = "LICENSE"
 readme = "README.md"
 requires-python = ">=3.11"
-
 [project.optional-dependencies]
 dev = [
     "black",
@@ -48,7 +46,7 @@ dev = [
     # Commented out due to dependency version conflict with pydantic 1.x
     # "copier",
     "myst-parser",
-    "ophyd_async[sim,ca,pva]@git+https://github.com/bluesky/ophyd-async.git@improve-error-when-raw2derived-has-no-type",
+    "ophyd_async[sim]>=v0.14.0",
     "pipdeptree",
     "pre-commit",
     "psutil",
@@ -73,7 +71,6 @@ dev = [
     "types-PyYAML",
     "types-aiofiles",
 ]
-
 [project.scripts]
 dodal = "dodal.__main__:main"
 save-panda = "dodal.plans.save_panda:main"
