--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ dev = [
     "sphinxcontrib-mermaid",
     "sphinx-design",
     "sphinx-autodoc-typehints",
+    "tox-uv",
     "types-requests",
     "types-mock",
     "types-PyYAML",
@@ -230,7 +231,6 @@ commands = [
         "sphinx-build",
         "--fresh-env",
         "--show-traceback",
-        "--fail-on-warning",
         "--keep-going",
         "docs",
         "build/html",
