--- a/.github/workflows/_docs.yml
+++ b/.github/workflows/_docs.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v7
 
+      # - name: Install requirements
+      #   run: uv sync --group dev
+
       - name: Build docs
         run: uv run --locked tox -e docs
 
