--- a/.github/workflows/_tox.yml
+++ b/.github/workflows/_tox.yml
@@ -19,7 +19,7 @@ jobs:
         uses: astral-sh/setup-uv@v7
 
       - name: Run import linter
-        run: lint-imports
+        run: uv run --locked lint-imports
 
       - name: Run tox
         run: uv run --locked tox -e ${{ inputs.tox }}
