--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -28,13 +28,8 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v7
-          
-      - if: inputs.python-version == 'dev'
-        name: Install dev versions of python packages
-        run: uv sync --python "$(sed -Ene "s/ARG PYTHON_VERSION=([0-9\.]+).*/\1/p" Dockerfile)" --group dev
 
-      - if: inputs.python-version != 'dev'
-        name: Install latest versions of python packages
+      - name: Install latest versions of python packages
         run: uv sync --python ${{ inputs.python-version }} --group dev
       
       - name: Run tests
