--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,6 @@ dev = [
     "pytest-cov",
     "pytest-json-report",
     "pytest-random-order",
-    "pytest-timeout",
     "ruff",
     "sphinx<7.4.6",              #  pinned due to https://github.com/sphinx-doc/sphinx/issues/12660
     "sphinx-autobuild",
@@ -193,6 +192,8 @@ commands = [
         "term",
         "--cov-report",
         "xml:cov.xml",
+        "--json-report",
+        "--json-report-file=unit-report.json",
         "tests",
         { replace = "posargs", default = [
         ], extend = true },
