--- a/src/dodal/beamlines/configs/i10_2/devices/mirrors.yaml
+++ b/src/dodal/beamlines/configs/i10_2/devices/mirrors.yaml
@@ -1,12 +1,12 @@
 - section: "Mirrors"
-  func: focusing_mirror
+  device: focusing_mirror
   type: PiezoMirror
   import_from: "dodal.devices.i10"
   params:
     prefix: 'f"{PREFIX.beamline_prefix}-OP-FOCS-01:"'
 
 - section: "Mirrors"
-  func: switching_mirror
+  device: switching_mirror
   type: PiezoMirror
   import_from: "dodal.devices.i10"
   params:
