--- a/pyproject.toml
+++ b/pyproject.toml
@@ -176,7 +176,7 @@ commands = [
     [
         "pyright",
         "--pythonpath",
-        "{posargs:.venv/bin/python}",
+        "{env:VIRTUAL_ENV}/bin/python",
         "src",
         "tests",
         { replace = "posargs", default = [
