--- a/.github/workflows/_docs.yml
+++ b/.github/workflows/_docs.yml
@@ -20,11 +20,14 @@ jobs:
       - name: Install system packages
         run: sudo apt-get install graphviz
 
-      - name: Install python packages
-        uses: ./.github/actions/install_requirements
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+
+      # - name: Install requirements
+      #   run: uv sync --group dev
 
       - name: Build docs
-        run: tox -e docs
+        run: uv run --locked tox -e docs
 
       - name: Remove environment.pickle
         run: rm build/html/.doctrees/environment.pickle
