--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "aiohttp",
     "redis",
     "scanspec>=0.7.3",
-    "pyzmq==27.1.0",                # Until we can move to RHEL 8 https://github.com/DiamondLightSource/mx-bluesky/issues/1139
+    "pyzmq==27.1.0",
     "deepdiff",
     "daq-config-server>=v1.0.0",    # For getting Configuration settings.
 ]
